<resources>
    <string name="app_name" translatable="false">Rememory</string>
    <string name="app_name_title">Rememory: Travel the world</string>

    <string name="start">Start</string>
    <string name="locked">Locked</string>

    <string name="settings">Settings</string>
    <string name="remove_ad">Remove ad</string>
    <string name="achieves">Achieves</string>
    <string name="leaders_board">Leaders board</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="send_feedback">Send feedback</string>
    <string name="privacy_policy_title">Privacy policy</string>

    <string name="time">Time:</string>
    <string name="attempts">Attempts: </string>
    <string name="total">Total: </string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <!-- Application UI -->
    <string name="title_activity_main">Classy Taxi</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_premium">Premium</string>
    <string name="tab_text_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="no_basic_content">Loading basic content</string>
    <string name="no_premium_content">Loading premium content</string>
    <string name="refresh_menu_text">Refresh</string>

    <string name="remove_all_ads">Remove all ads from the app.</string>
    <string name="buy_for_five_uah_in_year">Buy for 5 UAH in a year</string>
    <string name="open_all_levels">Open all levels</string>
    <string name="buy_for_five_uah">Buy for 5 UAH at once</string>

    <string name="back">Back</string>

    <!-- Minor subscription notices -->
    <string name="grace_period_message">Something’s wrong with your subscription, but you’ve still got access during a temporary grace period. Tap to fix it.</string>
    <string name="restore_message_with_date">Your subscription is canceled and will expire on %1$s. Tap to restore your subscription.</string>

    <!-- Different account is using subscription -->
    <string name="transfer_message">Wrong taxi? A different account is already using your subscription, but you can transfer your subscription to this account.</string>
    <string name="transfer_message_with_sku">Wrong taxi? A different account is already using your %1$s subscription, but you can transfer your subscription to this account.</string>
    <string name="transfer_message_with_two_skus">Wrong taxi? A different account is already using your %1$s and %2$s subscriptions, but you can transfer your subscriptions to this account.</string>
    <string name="transfer_button_text">Transfer</string>

    <!-- Account hold -->
    <string name="account_hold_message">Classy Taxi is stuck! Your account is on hold because there’s a problem with your payment method. Update your payment method or add a new one to restore your subscription.</string>
    <string name="fix_button_text">Manage payment methods</string>

    <!-- Active subscriptions -->
    <string name="premium_message">You have a Premium subscription</string>
    <string name="basic_message">You have a Basic subscription</string>
    <string name="basic_content_text">Welcome to the basic classy taxi, driving through the peaceful cool of the night.</string>
    <string name="premium_content_text">Welcome to the premium space taxi, flying through the endless possibilities of space.</string>

    <!-- Paywall -->
    <string name="paywall_message">Subscribe to a Basic or Premium plan</string>
    <string name="premium_paywall_message">You need to subscribe to a Premium plan</string>

    <!-- Upgrade -->
    <string name="premium_upgrade_message">You currently have a Basic plan. Upgrade to enjoy the benefits of the Premium plan.</string>
    <string name="upgrade_button_text">Upgrade</string>

    <!-- Manage subscriptions -->
    <string name="manage_subscription_label">Manage subscriptions</string>
    <string name="manage_subscription_message">Manage your subscription on Google Play.</string>
    <string name="google_play_subscriptions">Google Play Subscriptions</string>

    <!-- Subscription options -->
    <string name="subscription_options_label">Subscription options</string>
    <string name="basic_button_text">Basic</string>
    <string name="premium_button_text">Premium</string>
    <string name="subscription_option_basic_message">Basic plan</string>
    <string name="subscription_option_basic_message_current">Basic plan (current)</string>
    <string name="subscription_option_basic_message_account_hold">Basic plan (on hold)</string>
    <string name="subscription_option_basic_message_grace_period">Basic plan (payment issue)</string>
    <string name="subscription_option_basic_message_restore">Basic plan (canceled)</string>
    <string name="subscription_option_premium_message">Premium plan</string>
    <string name="subscription_option_premium_message_current">Premium plan (current)</string>
    <string name="subscription_option_premium_message_account_hold">Premium plan (on hold)</string>
    <string name="subscription_option_premium_message_grace_period">Premium plan (payment issue)</string>
    <string name="subscription_option_premium_message_restore">Premium plan (canceled)</string>

    <!-- Manage subscriptions guided step on Android TV -->
    <string name="done">Done</string>
    <string name="manage_subscription_scan_qr_code">Scan QR code with your mobile device.</string>

</resources>
