<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle_stroke"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v05"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/stars_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/stars_three"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_value"
        app:layout_constraintTop_toBottomOf="@id/stars_iv" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/time_title"
        app:layout_constraintStart_toEndOf="@id/time_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time_title" />

    <TextView
        android:id="@+id/attempts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:text="@string/attempts"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/attempts_value"
        app:layout_constraintTop_toBottomOf="@id/time_title" />

    <TextView
        android:id="@+id/attempts_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/attempts_title"
        app:layout_constraintStart_toEndOf="@id/attempts_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/attempts_title" />

    <TextView
        android:id="@+id/total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attempts_title" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_title" />

    <ImageView
        android:id="@+id/restart_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rectangle_solid_with_stroke"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:padding="16dp"
        android:src="@drawable/ic_replay"
        android:textColor="@color/onColorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_value"
        android:contentDescription="@string/restart" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rectangle_solid_with_stroke"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:padding="16dp"
        android:src="@drawable/ic_play"
        android:textColor="@color/onColorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home_button"
        app:layout_constraintStart_toEndOf="@id/restart_button"
        app:layout_constraintTop_toBottomOf="@id/total_value"
        android:contentDescription="@string/next" />

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rectangle_solid_with_stroke"
        android:fontFamily="@font/mr_manga_master_bbg"
        android:gravity="center"
        android:padding="16dp"
        android:src="@drawable/ic_home"
        android:textColor="@color/onColorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/next_button"
        app:layout_constraintTop_toBottomOf="@id/total_value"
        android:contentDescription="@string/home" />

</androidx.constraintlayout.widget.ConstraintLayout>